Current version (1.8_trunk):
  - Add "Check station" button for Equipments and Channels
  - Add "Last 3 interventions" panel for Equipments and Stations

Version 1.7:
  - Add a checkbox on project to hide some project from filtering on stations
  - Display all stations, equipments and interventions to all users
  - Change UPLOAD_ROOT to MEDIA_ROOT in Django settings (but keep it in Docker)
  - API new object: Document (from Station, Equipment, Equipment's model and intervention)
  - Add groundtype field on Place
  - Remove 'Recent Actions' panel from administration
  - New services available (for Equipments): Telnet and FTP

Version 1.6.1:
  - Fix about intervention deletion that does not update equipments

Version 1.6:
  - Improve Travis-CI support
  - Each station have a "Google Map View" link to display it on Google Map
  - Project called "ALL" is not mandatory
  - Reduce Channel detail page from 40 seconds to approximatively 2 seconds.
  - Fix Docker static file content types (with a MIME file for uWSGI)
  - Fix Docker entrypoint static file generation
  - CeCILL license applied
  - New "Add 3 channels" button wizard on Site (multiple channels creation). Checks that no similar channel exists before creation.
  - An equipment have a default configuration that comes from its model. If you create a channel that uses this equipment, it takes first its default equipment configuration then its equipment's model configuration
  - Fix: Default equipment on Intervention is not set. It uses now those from which you come.
  - Fix: Station map title was "Django administration". Now current application version
  - API new field on Site: 'status'
  - Admin interface is the main one. Forget '/gissmo' in URL
  - Docker entrypoint checks now postgreSQL variables
  - Rename postgreSQL variable names in Django
  - Dockerfile use now Alpine 3.4

Version 1.5.2:
  - Fix about Organism deletion
  - Change Dockerfile upload directory variable and permissions