@@ -1,6 +1,10 @@
 #!/usr/bin/env sh
 set -e
 
+manage () {
+  exec python3 manage.py $@
+}
+
 # DB_PORT_5432_TCP_ADDR and DB_PORT_5432_TCP_PORT exists if you link this
 # container to another one called 'db' (while using --link Docker option).
 if [ -z "$POSTGRES_HOST" ] && [ -n "$DB_PORT_5432_TCP_ADDR" ]; then
@@ -19,7 +23,7 @@ chown -R guest $UPLOAD_ROOT
 
 # DEVELOPEMENT ENVIRONMENT
 if [ "$1" = 'development' ]; then
-  exec python3 manage.py runserver 0.0.0.0:8000
+  manage runserver 0.0.0.0:8000
 # PRODUCTION ENVIRONMENT
 elif [ "$1" = 'production' ]; then
   export DJANGO_SETTINGS_MODULE=gissmo.settings.production
@@ -30,6 +34,12 @@ elif [ "$1" = 'test' ]; then
   export DEBUG=True
   export SECRET_KEY="abcdefghijklmnopqrstuvwxyz"
   exec uwsgi --ini uwsgi.ini --pythonpath $GISSMO_DIR --static-map=/gissmo/static/=$STATIC_ROOT
+# MISCELLANEOUS COMMANDS
+elif [ "$1" = 'manage' ]; then
+  shift
+  manage $@
+elif [ "$1" = 'migrate' ]; then
+  manage migrate
 fi
 
 exec "$@"
